--- a/docs/math/sketches/2/_2.md
+++ b/docs/math/sketches/2/_2.md
@@ -386,7 +386,7 @@ Consider a proposed monoidal monotone $\mathbf{Bool}\xrightarrow{g}\mathbf{Cost}
   - $u(x=\infty)\mapsto false,\ d(x < \infty) \mapsto true$
 - For both of these, answer:
 
-1. Is it [monotonic](../1/4#monotone-map)?
+1. Is it [monotonic](../1/4.qmd#monotone-map)?
 2. If so, does it satsify the monoidal monotone properties?
 3. If so, is it strict?
 
