--- a/docs/math/sketches/2/_3.md
+++ b/docs/math/sketches/2/_3.md
@@ -48,7 +48,7 @@ We can represent the [binary relation](../1/2.qmd#relation) (hom-object) with a 
 
 <div id="preorder-boolcat"/></div>
 
-There is a bijective correspondence between [preorders](../1/3#preorder) and $\mathcal{B}$-categories
+There is a bijective correspondence between [preorders](../1/3.qmd#preorder) and $\mathcal{B}$-categories
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Proof
