--- a/docs/math/sketches/2/_5.md
+++ b/docs/math/sketches/2/_5.md
@@ -62,9 +62,9 @@ e. $\forall u,v,w \in V: (u \multimap v) \otimes (v \multimap w) \leq (u \multim
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Proof
 
-a. The [meaning](../1/6#galois-connection) of $(- \otimes v) \dashv (v \multimap -)$ is exactly the condition of $\multimap$ in a closed symmetric monoidal preorder.
-b. This follows from (1), using the fact that [left adjoints preserve joins](#../1/6#adjoints-preserve).
-c. This follows from (1) using the [alternative characterization](../1/6#alternate-galois) of Galois connections.
+a. The [meaning](../1/6.qmd#galois-connection) of $(- \otimes v) \dashv (v \multimap -)$ is exactly the condition of $\multimap$ in a closed symmetric monoidal preorder.
+b. This follows from (1), using the fact that [left adjoints preserve joins](#../1/6.qmd#adjoints-preserve).
+c. This follows from (1) using the [alternative characterization](../1/6.qmd#alternate-galois) of Galois connections.
     - Alternatively, start from definition of closed symmetric monoidal preorder and substitute $v \multimap w$ for $a$, and note by reflexivity that  $(v \multimap w) \leq (v \multimap w)$
     - Then we obtain $(v \multimap w) \otimes v \leq w$ (by symmetry of $\otimes$ we are done)
 
@@ -84,7 +84,7 @@ e. We need $u \otimes (u \multimap v) \otimes (v \multimap w) \leq w$
 
 Prove that a [symmetric monoidal preorder](2.qmd#smp) is closed iff, given any $v \in V$, the map $V \xrightarrow{(-\otimes v)}V$ given by multiply with $v$ has a right adjoint.  We write this adjoint $V \xrightarrow{(v \multimap -)}V$:
 
-1. Show that $V \xrightarrow{(-\otimes v)}V$ is [monotone](../1/4#monotone-map).
+1. Show that $V \xrightarrow{(-\otimes v)}V$ is [monotone](../1/4.qmd#monotone-map).
 2. Supposing that $\mathcal{V}$ is closed, show that $\forall v,w \in V: ((v \multimap w)\otimes v) \leq w$
 3. Show that $(v \multimap -)$ is monotone.
 4. Conclude that a [symmetric monoidal preorder](2.qmd#smp) is closed iff the monotone map $(- \otimes v)$ has a [right adjoint](../1/6.qmd#galois-connection).
@@ -162,7 +162,7 @@ Show that $\mathbf{Bool}=(\mathbb{B},\leq, true, \land)$ is monoidal closed.
 <div id="cost-quantale"/></div>
 
 - We saw that **Cost** is monoidal closed above.
-- To check if **Cost** is a quantale, we take an arbitrary set of elements and ask if it has a [join](../1/6#join).
+- To check if **Cost** is a quantale, we take an arbitrary set of elements and ask if it has a [join](../1/5.qmd#join).
 - Because $\geq$ is a total order, we can take the *infimum* or greatest lower bound, as the join.
     - $\bigvee\{2.5,2.05,2.005,...\} = 2$.
 - We need a $0$, which is something which is related to everything (the first join condition is vacuous). Because the preorder relation is $\geq$ in **Cost** we need something greater than everything, so $0 = \infty$.
@@ -202,7 +202,7 @@ Suppose $\mathcal{V}=(V,\leq,I,\otimes)$ is a [symmetric monoidal preorder](2.qm
 
 -  We proved one direction in SMP currying.
 - We need to show that $(v \otimes \bigvee A)\cong  \bigvee_{a \in A} v \otimes a$ (and all joins existing) implies that there exists a $\multimap$ operation that satisfies the closed property: $\forall a,v,w \in V: (a \otimes v) \leq w$ iff $a \leq (v \multimap w)$.
-- The [adjoint functor theorem for preorders](../1/6/#adjoint-functor-theorem) states that [monotone maps](../1/4#monotone-map) preserve joins iff they're left adjoint, so $V \xrightarrow{-\otimes v} V$ must have a right adjoint $g$, which, being a [Galois connection](../1/6.qmd#galois-connection), will satisfy the property $(a \otimes v) \leq w \iff a \leq g(w)$ (this is the monoidal closed property).
+- The [adjoint functor theorem for preorders](../1/6/#adjoint-functor-theorem) states that [monotone maps](../1/4.qmd#monotone-map) preserve joins iff they're left adjoint, so $V \xrightarrow{-\otimes v} V$ must have a right adjoint $g$, which, being a [Galois connection](../1/6.qmd#galois-connection), will satisfy the property $(a \otimes v) \leq w \iff a \leq g(w)$ (this is the monoidal closed property).
 - Let's rename $g \equiv v \multimap -$. The adjoint functor theorem even gives us a construction for the right adjoint, namely: $v \multimap w:=\bigvee\{a \in V\ |\ a \otimes v \leq w\}$.
 :::
 :::
