--- a/docs/math/sketches/4/_2.md
+++ b/docs/math/sketches/4/_2.md
@@ -55,7 +55,7 @@ Suppose we have the preorders $X:=\boxed{monoid\rightarrow category \leftarrow p
 ## Exercise 4-7
 <div id="4-7"/></div>
 
-Show that the Boolean $\Rightarrow$  satsifies the requirements of a [closure operator](../1/6#closure-operator).
+Show that the Boolean $\Rightarrow$  satsifies the requirements of a [closure operator](../1/6.qmd#closure-operator).
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
