--- a/docs/phil/people/dummett/index.qmd
+++ b/docs/phil/people/dummett/index.qmd
@@ -2,4 +2,6 @@
 title: Dummett
 ---
 
-Michael Dummett
+Michael Dummett was an English philosopher of logic (1925-2011).
+
+![](/images/headshots/dummett.jpeg)
