--- a/docs/phil/people/leibniz/index.qmd
+++ b/docs/phil/people/leibniz/index.qmd
@@ -2,4 +2,6 @@
 title: Leibniz
 ---
 
-A German metaphysical rationalist, 1646-1716.
+A German metaphysical rationalist (1646-1716).
+
+![](/images/headshots/leibniz.jpeg)
