--- a/docs/phil/people/sellars/index.qmd
+++ b/docs/phil/people/sellars/index.qmd
@@ -13,7 +13,7 @@ listing:
 Born 1912 in Michigan, died in 1989.
 
 
-![](/images/sellars-w.jpeg)
+![](/images/headshots/sellars-w.jpeg)
 
 # Quotes
 
