--- a/references.bib
+++ b/references.bib
@@ -480,3 +480,14 @@
   year={2021},
   organization={Springer}
 }
+
+@article{brandom2006kantian,
+  title={Kantian lessons about mind, meaning, and rationality},
+  author={Brandom, Robert},
+  journal={The Southern journal of philosophy},
+  volume={44},
+  number={S1},
+  pages={49--71},
+  year={2006},
+  publisher={Wiley Online Library}
+}
