--- a/docs/phil/people/derrida/index.qmd
+++ b/docs/phil/people/derrida/index.qmd
@@ -9,7 +9,10 @@ listing:
     - ../../../../backlinks/docs_phil_people_derrida_index.yml
 ---
 
-A French philosopher, 1930-2005.
+A French philosopher (1930-2005).
+
+![](/images/headshots/derrida.jpeg)
+
 
 Philosophers have had this idea that reason is central to talk and thought. But we hardly ever actually reason with each other or argue or infer; look at all the playful things we can do with language.
 
