--- a/docs/phil/people/heidegger/index.qmd
+++ b/docs/phil/people/heidegger/index.qmd
@@ -2,4 +2,6 @@
 title: Heidegger
 ---
 
-Martin Heidegger.
+Martin Heidegger was a German philosopher (1889-1976).
+
+![](/images/headshots/heidegger.jpeg)
