--- a/docs/phil/people/kant/index.qmd
+++ b/docs/phil/people/kant/index.qmd
@@ -9,7 +9,39 @@ listing:
     - ../../../../backlinks/docs_phil_people_kant_index.yml
 ---
 
+Immanuel Kant was a German philosopher (1724-1804).
+
+![](/images/headshots/kant.jpeg)
+
+
 # On Locke
 The "celebrated Mr. Locke" (i.e. empiricism) offered "a mere physiology of the understanding." [^1]
 
+# Kantian problematic
+
+Kant transformed the Cartesian problematic from an *epistemic* one to a *semantic* one [-@brandom2006kantian].
+
+- He shifts the center of attention from *truth* and *justification* to the nature of representation itself.
+- He replaces concern with *justifying claims* by concern with understanding representational purport.
+- His problem is not "show that reality is often as it appears", but rather "understand what
+it is for things so much as to appear to be one way rather than another."
+- The epistemological equation has semantic presuppositions, which he challenges.
+
+Kant thinks that answering the semantic skeptic will also address the epistemic skeptic.
+
+- Specifying conditions under which there could be representations at all requires
+  that there is a substantial degree of representational *success*. If we are not
+  to a large extent *right* about representations, we can't make sense of being
+  *wrong*. This idea is echoed by Davidson and Putnam's responses to skeptics.
+
+# Innovations
+- The tradition Kant inherited thought of judgment as *predicating*
+    - i.e. classifying objects as being particular kinds
+    - Kant considers many other forms of judgment: modal, conditional, disjunctive, negative
+- What distinguishes knowers from non-sapient creatures is not that they involve special
+  mental processes, but rather that their judgments are in a distinctive way something
+  they are *responsible* for.
+     - minded creatures are not distinguished by an ontological distinction but rather
+       a *de*ontological one.
+       
 [^1]: A 85-7 / B 117-9 [-@smith2011immanuel]
