--- a/docs/phil/people/wittgenstein/index.qmd
+++ b/docs/phil/people/wittgenstein/index.qmd
@@ -9,7 +9,10 @@ listing:
     - ../../../../backlinks/docs_phil_people_wittgenstein_index.yml
 ---
 
-An Austrian philosopher, 1889-1951.
+An Austrian philosopher (1889-1951).
+
+![](/images/headshots/wittgenstein.jpeg)
+
 
 
 # Quotes
